fixed footer whitespace

--- a/css/home.css
+++ b/css/home.css
@@ -10,11 +10,14 @@ body
     overflow-x: hidden;
     font-family: 'Cinzel', serif;
     font-size: 48px;
+    padding-bottom: 0;
+    margin-bottom: -50px;
 }
 
 .container-fluid
 {
     padding: 0;
+    min-height: 100vh; 
 }
 
 .image
@@ -46,7 +49,6 @@ body
     text-align: center;
     width: 100vw;
     position: absolute;
-    bottom: 0;
 }
 
 .link-color
